--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     color: #222;
-    font-family: Noto Sans JP,'Courier New', Courier, monospace;
+    font-family: "Noto Sans JP", sans-serif;
     box-sizing: border-box;
 }
 
